tests/fsharp/typecheck/sigs/neg118.bsl

neg118.fs(18,21,18,37): typecheck error FS0003: This value is not a function and cannot be applied.

neg118.fs(19,21,19,37): typecheck error FS0003: This value is not a function and cannot be applied.

neg118.fs(20,21,20,39): typecheck error FS0003: This value is not a function and cannot be applied.

neg118.fs(21,21,21,41): typecheck error FS0003: This value is not a function and cannot be applied.

neg118.fs(22,21,22,39): typecheck error FS0003: This value is not a function and cannot be applied.

neg118.fs(25,51,25,67): typecheck error FS0003: This value is not a function and cannot be applied.
